2001-05-01  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): added "-t" ("traditional") command line
	option to override "-a" ("maximum ANSI")

2001-05-01  Sam Steingold  <sds@gnu.org>

	* condition.lisp (handler-case): accept :NO-ERROR clause in any
	position, not just the last one

2001-04-30  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (test-argument-syntax): call C-WARN and return NIL
	on WRONG-KEY, instead of calling C-ERROR
	(*deprecated-functions-list*): added GET-SETF-METHOD-MULTIPLE-VALUE

2001-04-25  Sam Steingold  <sds@gnu.org>

	* runprog.lisp (run-shell-command, run-program): accept :wait
	parameter (defaults to T)
	* clhs.lisp (clhs): pass :wait nil to RUN-PROGRAM

2001-04-25  Sam Steingold  <sds@gnu.org>

	* eval.d (invoke_handlers): fixed the 2001-04-18 patch for Linux

2001-04-24  Sam Steingold  <sds@gnu.org>

	* intgcd.d (I_I_xgcd_I_I_I): do not use bit operations for logical
	variables sA and sB (this caused incorrect results on alpha-tru64)

2001-04-24  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc5/linux.lisp, bindings/linuxlibc6/linux.lisp:
	added package prefix to IN-PACKAGE and DELETE-PACKAGE

2001-04-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (linkkit): rm-r it before creating links

2001-04-23  Sam Steingold  <sds@gnu.org>

	* affi1.lisp: use DEFPACKAGE to define package AFFI

2001-04-22  Sam Steingold  <sds@gnu.org>

	Finished re-packaging in the modules directory
	* bindings/amigaos/asl-load.lisp, bindings/amigaos/window.lisp,
	bindings/linuxlibc5/linux.lisp, bindings/linuxlibc6/linux.lisp,
	clx/mit-clx/package.lisp, modules/postgresql642/postgresql.
	modules/postgresql632/postgresql.lisp, modules/wildcard/wildcard.lisp:
	use DEFPACKAGE, not CLtL1 IN-PACKAGE
	* new-clx/demos/clx-demos.lisp: getenv is in EXT, not SYS now,
	use strings, not symbols in DEFPACKAGE

2001-04-20  Sam Steingold  <sds@gnu.org>

	* constobj.d (version): bump the bytecode version due to repackaging

2001-04-19  Sam Steingold  <sds@gnu.org>
